# dev-debt-ops

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  CHANGELOG.md  CLAUDE.md  README.md  compose.prod.yml  compose.yml  lefthook.yml
backend/: pyproject.toml
backend/api/: alembic.ini  pyproject.toml
backend/api/app/: main.py
backend/api/app/agent/: __init__.py
backend/api/app/alembic/: env.py
backend/api/app/alembic/versions/: 0001_initial.py  0002_add_oauth_accounts.py  0004_add_projects.py  0005_add_jobs.py  0006_add_analysis_runs_and_repo_files.py  0007_add_code_debts.py  0008_add_file_kc_and_dependencies.py  0009_add_knowledge_debts_and_assigned_developers.py  0010_add_debt_trend_points.py  0011_add_quiz_tables.py  0012_add_learning_plans.py  0013_add_agent_loop.py  (+15 more)
backend/api/app/core/: access_token.py  config.py  csrf.py  db.py  refresh_strategy.py  refresh_token_db.py  security.py
backend/api/app/models/: __init__.py  tech_stack.py  user.py
backend/api/app/schemas/: agent.py  code_graph.py  debt.py  galaxy.py  job.py  knowledge_unit.py  learning.py  overview.py  quiz.py  user.py
backend/api/app/scripts/: prune_refresh_tokens.py  seed_demo.py
backend/api/app/services/: cloud_tasks_dispatcher.py  credits.py  debt_query.py  demo.py  dependencies.py  galaxy_query.py  gcs_blob_client.py  gemini_stack_service.py  github_app.py  github_git_client.py  github_oauth_client.py  job_orchestrator.py  knowledge_units.py  local_http_dispatcher.py  mock_task_dispatcher.py  mock_worker.py  project.py
backend/api/tests/: conftest.py  test_admin_roles.py  test_analysis_foundation.py  test_credits.py  test_echo_end_to_end.py  test_enqueue_spillover.py  test_mock_task_dispatcher.py  test_seed_demo.py
backend/api/tests/agent/: conftest.py  test_stack_agent.py
backend/api/tests/core/: test_access_token.py  test_refresh_token_db.py
backend/api/tests/services/: conftest.py  test_github_app.py  test_github_git_client.py  test_local_http_dispatcher.py
backend/app/: main.py
backend/app/agent/: stack_agent.py
backend/app/alembic/versions/: 0003_add_tech_stacks.py
backend/app/api/: deps.py  docs.py
backend/app/api/v1/: auth.py  github.py  health.py  orgs.py  projects.py  router.py  stack.py
backend/app/core/: access_token.py  config.py  exceptions.py  security.py
backend/app/models/: __init__.py  base.py  oauth_account.py  org.py  project.py  refresh_token.py  user.py
backend/app/schemas/: common.py  org.py  project.py  user.py
backend/app/services/: gemini_stack_service.py  github_app.py  github_git_client.py  github_oauth_client.py  org.py
backend/service/: pyproject.toml
backend/service/service/: __init__.py  config.py  db.py  dependencies.py  gcs_blob_client.py  main.py  registry.py
backend/service/service/agents/: __init__.py  base_analysis_tools.py  budget.py  code_graph_mcp.py  feature_agent.py  github_mcp.py  hooks.py  learning_agent.py  model.py  plugin.py  quiz_agent.py  refactor_agent.py  remediation.py  runner.py  semgrep_mcp.py  semgrep_mcp_server.py  serena_mcp.py  single_agent.py  stack_agent.py  tools.py  trace.py  trivy_mcp.py  twin.py  walkthrough_agent.py
backend/service/service/pipelines/: __init__.py  agent_loop.py  agentic_analysis.py  baseline_generation.py  code_debt_detection.py  code_walkthrough_generation.py  feature_clustering.py  kc_analysis.py  knowledge_debt_detection.py  learning_plan_generation.py  progress.py  quiz_generation.py  quiz_grading.py  repayment_pr_generation.py  stack_analysis.py
backend/service/service/services/: authorship.py  code_analysis.py  code_graph.py  code_walkthrough.py  dependency_extraction.py  dlp.py  feature_authoring.py  feature_communities.py  function_graph.py  gemini_stack_service.py  github_git_client.py  knowledge_analysis.py  learning_authoring.py  quiz_authoring.py  repayment_refactor.py  repo_checkout.py  secret_redaction.py  semgrep_scan.py  stack_authoring.py  trivy_scan.py
backend/service/tests/: conftest.py  test_agent_loop.py  test_agentic_analysis.py  test_agentic_authoring.py  test_agents_foundation.py  test_ai_generation_cache.py  test_base_analysis_authoring.py  test_code_debt_detection.py  test_code_graph.py  test_code_graph_mcp.py  test_code_walkthrough.py  test_config.py  test_dependency_extraction.py  test_feature_clustering.py  test_feature_communities.py  test_feature_quiz.py  test_function_graph.py  test_github_caching_client.py  test_github_history.py  test_github_mcp.py  test_github_rate_limit.py  test_github_write.py  test_health.py  test_kc_analysis.py  test_knowledge_debt_detection.py  test_learning_authoring.py  test_learning_plan_generation.py  test_pipelines.py  test_quiz_certified_kc.py  test_quiz_pipelines.py  test_repayment_pr_generation.py  test_repo_checkout.py  test_secret_redaction.py  test_semgrep_scan.py  test_serena_mcp.py  test_stack_analysis.py  test_stack_authoring.py  test_tasks.py  test_trivy_mcp.py  test_trivy_scan.py
backend/shared/: pyproject.toml
backend/shared/shared/: __init__.py  blob.py  enums.py  gcs.py  queue.py  registry.py  worker.py
backend/shared/shared/models/: __init__.py  agent_loop.py  analysis_run.py  assigned_developer.py  base_analysis_snapshot.py  code_debt.py  code_graph.py  debt_trend_point.py  dependency.py  feature.py  feature_file.py  file_kc.py  job.py  knowledge_debt.py  learning_plan.py  quiz_answer.py  quiz_result.py  quiz_session.py  repo_file.py  tech_stack.py
backend/shared/shared/pipelines/: __init__.py  context.py  echo.py  ping.py
backend/shared/shared/schemas/: __init__.py  agent_loop.py  agentic_analysis.py  base.py  base_analysis.py  code_debt_detection.py  feature_clustering.py  job.py  kc_analysis.py  knowledge_debt_detection.py  learning_plan.py  quiz.py  repayment_pr_generation.py  stack_analysis.py
backend/shared/tests/: test_analysis_models.py  test_enums.py  test_feature_models.py  test_kc_models.py
backend/tests/: conftest.py
backend/tests/api/v1/: test_orgs.py  test_refresh.py
backend/tests/services/: conftest.py  test_github_app.py  test_github_git_client.py
(+436 files in other folders)
