[project]
name = "backend"
version = "0.0.5"
description = "FastAPI backend for the full-stack app template"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi-users[sqlalchemy]>=15.0.5",
    "fastapi[standard-no-fastapi-cloud-cli]>=0.136.1",
    "google-adk>=0.4.0",
    "google-genai>=1.0.0",
    "httpx>=0.28.1",
    "httpx-oauth>=0.15.0",
    "PyJWT>=2.8.0",
    "cryptography>=42.0.0",
    "pydantic-settings>=2.14.1",
    "scalar-fastapi>=1.8.2",
    "sqlalchemy[asyncio]>=2.0.49",
    "sqlmodel>=0.0.38",
    "uuid-utils>=0.14.1",
]

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ASYNC", "DTZ", "RUF", "TID", "PT", "D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"app/alembic/versions/**" = ["D"]
"tests/**" = ["D"]

[tool.ruff.lint.extend-per-file-ignores]
# D100/D104 covered by non-goals (modules, packages); D107 belt-and-suspenders for
# fastapi-users __init__ overrides; D105 silences magic methods.
"*" = ["D100", "D104", "D105", "D107"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's DI pattern uses `Depends(...)` as a default value; ruff's B008 is a false positive here.
extend-immutable-calls = ["fastapi.Depends"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.12",
    "ty>=0.0.34",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
