[project]
name = "rosetta-backend"
version = "0.0.5"
description = "Rosetta backend — uv workspace root (shared / api / service)"
requires-python = ">=3.13"

# Workspace root is a coordinator, not an installable package.
[tool.uv]
package = false

[tool.uv.workspace]
members = ["shared", "api", "service"]  # 将来 "functions" を追加可能

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ASYNC", "DTZ", "RUF", "TID", "PT", "D"]
# Japanese-primary codebase: fullwidth punctuation (（）、。…) in comments/docstrings/
# strings is intentional, so disable the ambiguous-unicode checks (cf. app_ref RUF001).
ignore = ["RUF001", "RUF002", "RUF003"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
# Workspace first-party packages (api app, shared, service) — group them together.
known-first-party = ["app", "shared", "service"]

[tool.ruff.lint.per-file-ignores]
"*/app/alembic/versions/**" = ["D"]
"*/tests/**" = ["D"]

[tool.ruff.lint.extend-per-file-ignores]
# D100/D104 covered by non-goals (modules, packages); D107 belt-and-suspenders for
# fastapi-users __init__ overrides; D105 silences magic methods.
"*" = ["D100", "D104", "D105", "D107"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's DI pattern uses `Depends(...)` as a default value; ruff's B008 is a false positive here.
extend-immutable-calls = ["fastapi.Depends"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.12",
    "ty>=0.0.51",
]
