[project]
name = "rosetta-api"
version = "0.0.5"
description = "Rosetta API backend (FastAPI) — external Cloud Run service"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "rosetta-shared",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi-users[sqlalchemy]>=15.0.5",
    "fastapi[standard-no-fastapi-cloud-cli]>=0.136.1",
    "google-adk>=0.4.0",
    "google-genai>=1.0.0",
    "httpx>=0.28.1",
    "httpx-oauth>=0.15.0",
    "PyJWT>=2.8.0",
    "cryptography>=42.0.0",
    "pydantic-settings>=2.14.1",
    "scalar-fastapi>=1.8.2",
    "sqlalchemy[asyncio]>=2.0.49",
    "sqlmodel>=0.0.38",
    "uuid-utils>=0.14.1",
]

# Run from source (uvicorn app.main:app); deps installed, project not built as a wheel.
[tool.uv]
package = false

[tool.uv.sources]
rosetta-shared = { workspace = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
