[project]
name = "rosetta-api"
version = "0.0.5"
description = "DevDebtOps API backend (FastAPI) — external Cloud Run service"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "rosetta-shared",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi-users[sqlalchemy]>=15.0.5",
    "fastapi[standard-no-fastapi-cloud-cli]>=0.136.1",
    "httpx>=0.28.1",
    "httpx-oauth>=0.15.0",
    "PyJWT>=2.8.0",
    "cryptography>=42.0.0",
    "pydantic-settings>=2.14.1",
    "scalar-fastapi>=1.8.2",
    "sqlalchemy[asyncio]>=2.0.51",
    "sqlmodel>=0.0.39",
    "uuid-utils>=0.14.1",
    "google-cloud-tasks>=2.22.0",
    "google-cloud-storage>=3.12.0",
]

# Run from source (uvicorn app.main:app); deps installed, project not built as a wheel.
[tool.uv]
package = false

[tool.uv.sources]
rosetta-shared = { workspace = true }

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
