[project]
name = "rosetta-shared"
version = "0.0.5"
description = "DevDebtOps shared data layer — enums / schemas / queue Protocols / ORM models (Job)"
requires-python = ">=3.13"
# 共有データ層: enum・共有 pydantic スキーマ・queue/Blob Protocol・共有 ORM モデル(Job)。
# 統合クライアント(github / gemini / httpx / PyJWT)は shared に置かない。
dependencies = ["pydantic>=2.0", "sqlmodel>=0.0.38"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["shared"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
